@@ -1,6 +1,5 @@
-package com.metacrew.pr2s.service.storage;
+package com.metacrew.pr2s.service.storageservice;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
@@ -16,6 +15,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Stream;
 
@@ -23,40 +24,51 @@ import java.util.stream.Stream;
 @Slf4j
 public class FileSystemStorageService implements StorageService{
     private final Path rootLocation;
-
     @Autowired
     public FileSystemStorageService(StorageProperties properties) {
-        this.rootLocation = Paths.get(properties.getLocation());
+        // TODO: 2022-08-09 프로퍼티 수정 필요
+        rootLocation = Paths.get(properties.getRootLocation());
     }
 
     @Override
-    public String store(MultipartFile file) {
+    public String store(MultipartFile file, FilePath path) {
         try {
+            String result;
             if (file.isEmpty()) {
                 throw new StorageException("Failed to store empty file.");
             }
+
+            String[] fileNames = file.getOriginalFilename().split("/");
+            if(fileNames.length > 1){
+                throw new StorageException("Cannot store folder.");
+            }
             String fileName = UUID.randomUUID().toString()+file.getOriginalFilename();
-            Path destinationFile = this.rootLocation.resolve(
-                            Paths.get(fileName))
-                    .normalize().toAbsolutePath();
-            if (!destinationFile.getParent().equals(this.rootLocation.toAbsolutePath())) {
+            log.info("파일이름확인{}",fileName);
+            Path subPath = Path.of(path.toString());
+            Path destinationFile = rootLocation.resolve(subPath)
+                                                .resolve(Paths.get(fileName))
+                                                .normalize().toAbsolutePath();
+            log.info("경로확인{}",destinationFile);
+            if (!destinationFile.getParent().equals(rootLocation.resolve(subPath).toAbsolutePath())) {
                 // This is a security check
-                throw new StorageException(
-                        "Cannot store file outside current directory.");
+                throw new StorageException("Cannot store file outside current directory.");
             }
             try (InputStream inputStream = file.getInputStream()) {
                 log.info(destinationFile.toString());
+                log.info("파일이름:{}", destinationFile.getFileName());
+                result = destinationFile.getFileName().toString();
                 Files.copy(inputStream, destinationFile,
                         StandardCopyOption.REPLACE_EXISTING);
             }
 
-            return fileName;
+            return result;
         }
         catch (IOException e) {
             throw new StorageException("Failed to store file.", e);
         }
     }
 
+    /*
     @Override
     public Stream<Path> loadAll() {
         try {
@@ -69,16 +81,15 @@ public class FileSystemStorageService implements StorageService{
         }
 
     }
-
     @Override
-    public Path load(String filename) {
-        return rootLocation.resolve(filename);
+    public Path load(String filename, String type) {
+        return this.locations.get(type).resolve(filename);
     }
 
     @Override
-    public Resource loadAsResource(String filename) {
+    public Resource loadAsResource(String filename, String type) {
         try {
-            Path file = load(filename);
+            Path file = load(filename, type);
             Resource resource = new UrlResource(file.toUri());
             if (resource.exists() || resource.isReadable()) {
                 return resource;
@@ -94,6 +105,8 @@ public class FileSystemStorageService implements StorageService{
         }
     }
 
+    */
+
     @Override
     public void deleteAll() {
         FileSystemUtils.deleteRecursively(rootLocation.toFile());
@@ -102,7 +115,11 @@ public class FileSystemStorageService implements StorageService{
     @Override
     public void init() {
         try {
-            Files.createDirectories(rootLocation);
+            for(FilePath filePath : FilePath.values()){
+                Path subPath = Path.of(filePath.toString());
+                Path destinationFile = rootLocation.resolve(subPath);
+                Files.createDirectories(destinationFile);
+            }
         }
         catch (IOException e) {
             throw new StorageException("Could not initialize storage", e);
